# file-identifier

./: .gitignore  LICENSE  README  pyproject.toml  setup.cfg
file_identifier/: __init__.py  cli.py  core.py
