[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "file-identifier"
version = "0.2.4"
description = "CLI tool to detect real file types using magic numbers, with JSON output, directory scanning, and extension mismatch detection"
readme = "README.md"
requires-python = ">=3.8"

authors = [
  { name="Author", email="priyanshidwivedi0712@gmail.com" }
]
[project.urls]
Homepage = "https://github.com/priy07/file-identifier"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
file-identifier = "file_identifier.cli:main"