[metadata]
name = file-identifier
version = 0.2.4
author = Priyanshi Dwivedi
author_email = priyanshidwivedi0712@gmail.com
description = CLI tool to detect real file types using magic numbers, with JSON output, directory scanning, and extension mismatch detection
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/priy07/file-identifier

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True

[options.entry_points]
console_scripts =
    file-identifier = file_identifier.cli:main